--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         <div class="row">
           <h2>Galería de Productos</h2>
 
-          <div class="col-4">
+          <div class="col-md-4 col-sm-12">
             <div class="card">
               <img src="https://picsum.photos/id/1067/600/400" alt="Imagen 1" />
               <div class="card-body">
@@ -85,7 +85,7 @@
             </div>
           </div>
 
-          <div class="col-4">
+          <div class="col-md-4 col-sm-12">
             <div class="card">
               <img src="https://picsum.photos/id/318/600/400" alt="Imagen 2" />
               <div class="card-body">
@@ -107,7 +107,7 @@
             </div>
           </div>
 
-          <div class="col-4">
+          <div class="col-md-4 col-sm-12">
             <div class="card">
               <img src="https://picsum.photos/id/174/600/400" alt="Imagen 3" />
               <div class="card-body">
