--- a/index.html
+++ b/index.html
@@ -45,6 +45,10 @@
             <li class="nav-item">
               <a class="nav-link" href="contacto.html">Contacto</a>
             </li>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="estadisticas.html">Estadisticas</a>
+          </li>
           </ul>
         </div>
         <form class="d-flex" role="search">
